Final Revisions and polish Reformatted for pdf export corrected details adjusted formatting based on feedback finished adding in-line documentation removed unnecessary pages and files

--- a/JamiesonncResume/JamiesonncResume.csproj
+++ b/JamiesonncResume/JamiesonncResume.csproj
@@ -7,7 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\index.png" />
+    <None Include="wwwroot\index.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\favicon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="resumeData.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
